2007-10-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/clipboard.py:
	* gaupol/agents/edit.py:
	* gaupol/agents/format.py:
	* gaupol/agents/open.py:
	* gaupol/agents/position.py:
	* gaupol/agents/save.py:
	* gaupol/agents/search.py:
	* gaupol/agents/text.py:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/assistants/text/assistant.py:
	* gaupol/gtk/assistants/text/capitalization.py:
	* gaupol/gtk/assistants/text/error.py:
	* gaupol/gtk/assistants/text/hearing.py:
	* gaupol/gtk/assistants/text/line.py:
	* gaupol/gtk/conf/config.py:
	* gaupol/gtk/dialogs/duration.py:
	* gaupol/gtk/dialogs/insert.py:
	* gaupol/gtk/dialogs/split.py:
	* gaupol/gtk/page.py:
	* gaupol/liner.py:
	* gaupol/project.py:
	Rename "indexes" to "indices".

2007-10-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/__init__.py:
	Bump version number.

	RELEASE 0.12.1

2007-10-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/menu.py:
	* gaupol/gtk/assistants/text/assistant.py:
	* gaupol/gtk/assistants/text/introduction.py:
	* gaupol/gtk/dialogs/debug.py:
	* gaupol/gtk/dialogs/file/save.py:
	* gaupol/gtk/dialogs/search.py:
	* gaupol/gtk/output.py:
	* gaupol/gtk/page.py:
	Fix remaining NameErrors with function arguments. (#10034)

2007-10-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/text.py (_capitalize_position):
	Fix match index usage due to change of self._re_capitalizable.

2007-09-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/countries.py:
	* gaupol/languages.py:
	Fix module docstrings.

2007-09-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/__init__.py:
	Bump version number.

	RELEASE 0.12

2007-09-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/assistants/text/assistant.py:
	Move the two lines of automatic post-progress-page page-switching from
	_prepare_confirmation_page to _correct_texts.

2007-09-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/assistants/text/assistant.py (_on_prepare):
	Possibly fix sometimes funky backwards navigation.
